syntax = "proto3";
package rpc.paymentprocessor.v1;
option go_package = "github.com/jacktantram/build/go/rpc/paymentprocessor/v1";


import "rpc/paymentprocessor/v1/capture.proto";
import "rpc/paymentprocessor/v1/payment.proto";
import "rpc/paymentprocessor/v1/payment_action.proto";
import "rpc/paymentprocessor/v1/refund.proto";
import "rpc/paymentprocessor/v1/void.proto";

// Represents a payment processor service
service PaymentProcessor{
  // Responsible for creating an authorization on a specified payment method.
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  // Will capture an existing payment.
  rpc Capture(CreateCaptureRequest) returns (CreateCaptureResponse);
  // Will refund an existing payment.
  rpc Refund(CreateRefundRequest) returns (CreateRefundResponse);
  // Will void an existing payment.
  rpc Void(CreateVoidRequest) returns (CreateVoidResponse);

  // Provides ability to get by payment id.
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  // Provides ability to list payment actions.
  rpc ListPaymentActions(ListPaymentActionsRequest) returns (ListPaymentActionsResponse);
}